[package]
name = "commit-spam"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/oknozor/commit-spammer"
description = "spam your commit history and look smart on twitter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "^0"
clap = "^2"
anyhow = "^1"
